# jira-survey

./: .gitignore  docker-compose.yml
backend/: Dockerfile  answer.json  create_collection.json  create_question.json  database.py  main.py  models.py  pyproject.toml  question_post.json  survey.db
backend_analytics/: Dockerfile  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  data.js  index.css
frontend/src/components/: AgreeQuestion.jsx  CheckBoxQuestion.jsx  EditQuestions.jsx  Examples.jsx  NewQuestionModal.jsx  Question.jsx  QuestionEditable.jsx  Questions.jsx  QuestionsEditable.jsx  RadioQuestion.jsx  Result.jsx  Results.jsx  Section.jsx  TabButton.jsx  Tabs.jsx  TextQuestion.jsx
frontend/src/components/Header/: Header.css  Header.jsx  HeaderEditable.jsx
frontend/survey-app/: package-lock.json  package.json
frontend/survey-app/src/: App.js
frontend2/frontend/: Dockerfile  package-lock.json  package.json
frontend2/frontend/src/: App.css  App.js  index.js
frontend2/frontend/src/components/: AllQuestions.js  Analytics.js  AnalyticsTest.js  AnswerQustion.js  CreateQuestionCollection.js  Home.js  NavigationDrawer.jsx  NewQuestionModal.jsx  api.js
