[tool.poetry]
name = "backend-analytics"
version = "0.1.0"
description = ""
authors = ["radulovskia <aleksandar.radulovski15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"
confluent-kafka = "^2.4.0"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
