[tool.poetry]
name = "backend-analytics"
version = "0.1.0"
description = ""
authors = ["radulovskia <aleksandar.radulovski15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
aiokafka = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
